--- a/.github/workflows/fetch-and-publish.yml
+++ b/.github/workflows/fetch-and-publish.yml
@@ -13,6 +13,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install libcurl4-openssl-dev libudunits2-dev
+          sudo apt install libgdal-dev libproj-dev libgeos-dev libcairo2-dev libnetcdf-dev
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
