--- a/.github/workflows/fetch-and-publish.yml
+++ b/.github/workflows/fetch-and-publish.yml
@@ -22,13 +22,27 @@ jobs:
         uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 1
-      - name: Store login credentials
+      - name: Try download data
         shell: bash
         env:
           USER_ID: ${{ secrets.EARTHDATA_USER_ID }}
           PWD: ${{ secrets.EARTHDATA_PWD }}
         run: |
           echo 'machine urs.earthdata.nasa.gov login "$env:USER_ID" password "$env:PWD"' >> ~/.netrc
-      - name: Get Data
-        shell: bash
-        run: Rscript R/workflow-fetch.R
+          curl \
+            -b .urs_cookies \
+            -c .urs_cookies \
+            -L -O -J \
+            --netrc-file .netrc \
+            --dump-header response-header.txt \
+            "https://n5eil02u.ecs.nsidc.org/egi/request?short_name=MOD10CM&version=6&format=GeoTIFF&time=2015-01-01,2015-02-01&Coverage=/MOD_CMG_Snow_5km/Snow_Cover_Monthly_CMG"
+      - name: Store login credentials
+      #   shell: bash
+      #   env:
+      #     USER_ID: ${{ secrets.EARTHDATA_USER_ID }}
+      #     PWD: ${{ secrets.EARTHDATA_PWD }}
+      #   run: |
+      #     echo 'machine urs.earthdata.nasa.gov login "$env:USER_ID" password "$env:PWD"' >> ~/.netrc
+      # - name: Get Data
+      #   shell: bash
+      #   run: Rscript R/workflow-fetch.R
