--- a/.github/workflows/fetch-and-publish.yml
+++ b/.github/workflows/fetch-and-publish.yml
@@ -22,6 +22,11 @@ jobs:
         uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 1
+      - name: Get data from prev run
+        uses: actions/download-artifact@v3
+        with:
+          name: satellite-snow-cover
+          path: data/satellite-snow-cover.Rdata
       - name: Try download data
         shell: bash
         run: |
